trunk/Archive2/6e/1d0b82047965a4/output
main.cpp:124:11: error: call to deleted constructor of 'implstore<loud, 10>'
        : m(source.m)
          ^ ~~~~~~~~
main.cpp:35:3: note: function has been explicitly marked deleted here
  implstore(implstore const& other) = delete;
  ^
1 error generated.
